--- a/templates/layouts/base.ejs
+++ b/templates/layouts/base.ejs
@@ -66,8 +66,8 @@
         <!-- 中间内容 -->
         <main class="flex-grow w-full mt-4 md:w-2 md:mt-12">
             <article class="prose dark:prose-invert lg:prose-lg mx-auto
-                          max-w-none md:max-w-2xl lg:max-w-4xl">
-                <%- include(pageData.layout.startsWith('layouts/') ? pageData.layout : 'content') %>
+                          max-w-none md:max-w-2xl lg:max-w-full">
+                <%- include(`${pageData.layout || 'content'}`) %>
             </article>
         </main>
 
