--- a/templates/layouts/base.ejs
+++ b/templates/layouts/base.ejs
@@ -9,6 +9,36 @@
     <!-- 基础样式文件 -->
     <link rel="stylesheet" href="/assets/pageforge.min.css">
 
+    <script>
+        (function () {
+            document.addEventListener('click', function (e) {
+                var link = e.target.closest('a');
+                if (!link) return;
+
+                const href = link.getAttribute('href');
+                if (!href || href.startsWith('http') || href.startsWith('#')) return;
+
+                e.preventDefault();
+
+                // 获取目标语言
+                const targetLang = href.split('/')[1];
+
+                fetch(href)
+                    .then(response => {
+                        if (response.ok) {
+                            window.location.href = href;
+                        }
+                        else {
+                            window.location.href = `/${targetLang}/404.html`;
+                        }
+                    })
+                    .catch(() => {
+                        window.location.href = `/${targetLang}/404.html`;
+                    });
+            });
+        })();
+    </script>
+
     <!-- 加载主题配置中的额外 CSS 文件 -->
     <% if (locals.siteData?.theme?.extraCss && Array.isArray(locals.siteData?.theme?.extraCss)) { %>
         <% locals.siteData?.theme?.extraCss.forEach(css_path => { %>
@@ -140,19 +170,6 @@
     </div>
 <% } %>
 </body>
-
-<!-- 处理 404 -->
-<script>
-    (function () {
-        const i18nEnable = `<%- locals?.siteData?.feature?.i18n?.enable %>`;
-        if (!i18nEnable) return;
-
-        const hasRule = `<%= (locals?.pageData?.rules || []).includes(pageData.noLocalePath) %>`;
-        if (!hasRule) {
-            window.location.href = `/<%= pageData.language %>/404.html` || `/404.html`;
-        }
-    })();
-</script>
 
 <!-- 基础脚本文件 -->
 <script src="/assets/pageforge.min.js"></script>
